# bobvpn

./: AGENTS.md  Cargo.toml  DEVELOPER.md  Dockerfile  Dockerfile.test  LICENSE  README.md  docker-compose.yml  test_docker.sh  test_http_fallback.sh
.github/workflows/: docker-publish.yml  windows-build.yml
src/: config.rs  crypto.rs  device.rs  main.rs  nm.rs  peer.rs  tun.rs  types.rs  web.rs
src/client/: mod.rs
src/server/: mod.rs
src/tunnel/: client.rs  http_fallback.rs  http_server.rs  mod.rs  server.rs
