[package]
name = "bobvpn"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tun-rs = { version = "2", features = ["async"] }
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
bytes = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
rustls-acme = { version = "0.12", features = ["axum"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
hex = "0.4"
